<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="bhowa.app.HomeTransactionActivity">


    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/header"
        android:layout="@layout/header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/transaction_report_activity_btn_view_raw_data"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_upload_pdf"
            android:onClick="onButtonClicker"
            android:text="@string/viewRawDataIconText"
            />

        <Button
            android:id="@+id/transaction_report_activity_btn_view_transactions"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_download_raw_data"
            android:onClick="onButtonClicker"
            android:text="@string/viewTransactionsIconText"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/transaction_report_activity_btn_upload_raw_data"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_upload_pdf"
            android:onClick="onButtonClicker"
            android:text="@string/uploadRawDataIconText"
            />

        <Button
            android:id="@+id/transaction_report_activity_btn_upload_transactions"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_download_raw_data"
            android:onClick="onButtonClicker"
            android:text="@string/uploadTransactionsIconText"
            />

    </LinearLayout>

</LinearLayout>
